# code-sherpa

./: .code-sherpa.yaml.example  .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  pyproject.toml
docs/: TESTING.md
src/code_sherpa/: __init__.py  main.py
src/code_sherpa/analyze/: __init__.py  file_explainer.py  quality.py  repo_summary.py  structure.py
src/code_sherpa/prompts/: __init__.py
src/code_sherpa/prompts/analyze/: file_explain.md  repo_summary.md
src/code_sherpa/prompts/review/: architect.md  junior.md  performance.md  security.md  summary.md
src/code_sherpa/review/: __init__.py  diff_parser.py  runner.py
src/code_sherpa/review/agents/: __init__.py  architect.py  base.py  junior.py  performance.py  security.py
src/code_sherpa/shared/: __init__.py  config.py  git.py  models.py  output.py
src/code_sherpa/shared/llm/: __init__.py  anthropic.py  base.py  openai.py
tests/: __init__.py  conftest.py  test_main.py
tests/unit/analyze/: __init__.py  test_file_explainer.py  test_quality.py  test_repo_summary.py  test_structure.py
tests/unit/review/: __init__.py  test_diff_parser.py  test_runner.py
tests/unit/review/agents/: __init__.py  test_agents.py  test_base.py
tests/unit/shared/: __init__.py  test_git.py  test_llm.py
